--- a/project.properties
+++ b/project.properties
@@ -12,3 +12,5 @@
 
 # Project target.
 target=Google Inc.:Google APIs:13
+android.library.reference.1=../gridlayout_v7
+android.library.reference.2=../gridlayout_v7
