--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,16 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="devN.games.agonia"
     android:installLocation="preferExternal"
-    android:versionCode="9"
-    android:versionName="2.1b" >
+    android:versionCode="10"
+    android:versionName="2.2" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-<!--    
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COURSE_LOCATION" />
--->
+
     <uses-sdk
         android:minSdkVersion="7"
         android:targetSdkVersion="17" />
@@ -21,6 +17,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/devn_theme" >
+        
         <activity
             android:name="devN.etc.SplashScreen"
             android:label="@string/app_name" >
@@ -36,11 +33,11 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".AgoniaMenu"
-            android:configChanges="orientation|keyboardHidden|keyboard"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:screenOrientation="portrait" />
          <activity
             android:name=".GameSetActivity"
-            android:configChanges="orientation|keyboardHidden|keyboard"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:screenOrientation="portrait" />
         <activity
             android:name=".AgoniaPref"
@@ -51,21 +48,18 @@
             android:name=".HowToPlay"
             android:configChanges="orientation|keyboardHidden|keyboard"
             android:screenOrientation="portrait" />
-        <activity
-            android:name="com.google.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
-<!--
+        
+        <!-- v2.2 added -->
         <activity
             android:name="com.adsdk.sdk.banner.InAppWebView"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
-        <activity
-            android:name="com.adsdk.sdk.mraid.MraidActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
         <activity
             android:name="com.adsdk.sdk.video.RichMediaActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:hardwareAccelerated="false" />
--->
+        <activity
+            android:name="com.adsdk.sdk.mraid.MraidActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
     </application>
 
 </manifest>
