--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,13 +3,15 @@
     package="devN.games.agonia"
     android:installLocation="preferExternal"
     android:versionCode="12"
-    android:versionName="2.3.0" >
+    android:versionName="2.3.1" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    
+    <!-- v2.3 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	
     <uses-sdk
         android:minSdkVersion="7"
         android:targetSdkVersion="17" />
@@ -50,19 +52,7 @@
             android:name=".HowToPlay"
             android:configChanges="orientation|keyboardHidden|keyboard"
             android:screenOrientation="portrait" />
-        
-        <!-- v2.2 added -->
-        <activity
-            android:name="com.adsdk.sdk.banner.InAppWebView"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
-        <activity
-            android:name="com.adsdk.sdk.video.RichMediaActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
-            android:hardwareAccelerated="false" />
-        <activity
-            android:name="com.adsdk.sdk.mraid.MraidActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
-        
+       
         <!-- v2.3 added -->
         <service
             android:name="com.ironsource.mobilcore.MobileCoreReport"
@@ -72,6 +62,29 @@
             android:name="com.ironsource.mobilcore.InstallationTracker"
             android:enabled="true"
             android:process=":installationTracker" />
+        
+        <activity
+            android:name=".GameStatsActivity"
+            android:configChanges="orientation|keyboardHidden|keyboard"
+            android:screenOrientation="portrait" />
+        
+        <activity
+            android:name="com.papaya.appflood.AFPanelActivity"
+            android:configChanges="keyboardHidden" >
+        </activity>
+        <activity
+            android:name="com.papaya.appflood.AFFullScreenActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:launchMode="singleTask"
+            android:theme="@android:style/Theme.Translucent" >
+        </activity>
+        <activity
+            android:name="com.papaya.appflood.AFListActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:launchMode="singleTask"
+            android:theme="@android:style/Theme.Translucent" >
+        </activity>
+
     </application>
 
 </manifest>
