--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="devN.games.agonia"
     android:installLocation="preferExternal"
-    android:versionCode="14"
-    android:versionName="2.3.1c" >
+    android:versionCode="15"
+    android:versionName="2.4" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -22,7 +22,7 @@
         android:label="@string/app_name"
         android:theme="@style/devn_theme" >
         
-        <activity
+		<activity
             android:name="devN.etc.SplashScreen"
             android:label="@string/app_name" >
             <intent-filter>
@@ -67,24 +67,30 @@
             android:name=".GameStatsActivity"
             android:configChanges="orientation|keyboardHidden|keyboard"
             android:screenOrientation="portrait" />
+		<activity
+            android:name="com.appflood.AFPanelActivity"
+            android:configChanges="keyboardHidden"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" >
+        </activity>
+        <activity
+            android:name="com.appflood.AFFullScreenActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:launchMode="singleTask"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" >
+        </activity>
+        <activity
+            android:name="com.appflood.AFListActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:launchMode="singleTask"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" >
+        </activity>
         
-        <activity
-            android:name="com.papaya.appflood.AFPanelActivity"
-            android:configChanges="keyboardHidden" >
-        </activity>
-        <activity
-            android:name="com.papaya.appflood.AFFullScreenActivity"
-            android:configChanges="keyboardHidden|orientation"
-            android:launchMode="singleTask"
-            android:theme="@android:style/Theme.Translucent" >
-        </activity>
-        <activity
-            android:name="com.papaya.appflood.AFListActivity"
-            android:configChanges="keyboardHidden|orientation"
-            android:launchMode="singleTask"
-            android:theme="@android:style/Theme.Translucent" >
-        </activity>
-
+        <!-- v2.4 added -->
+        <activity android:name="devN.etc.AdManagerActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
+		
+		<activity android:name="com.zjfjslbwndvj.AdIdActivity"
+			android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
     </application>
 
 </manifest>
