--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="devN.games.agonia"
     android:installLocation="preferExternal"
     android:versionCode="15"
-    android:versionName="2.4" >
+    android:versionName="2.4b" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -92,6 +92,9 @@
 		
 		<activity android:name="com.zjfjslbwndvj.AdIdActivity"
 			android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
+		
+		<activity android:name="com.google.ads.AdActivity"
+              android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
     </application>
 
 </manifest>
